--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "game-chief-front",
   "version": "0.1.0",
+  "engines": {
+    "node": "19.2.0"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
